--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <div style="margin-top: 10%; margin-bottom: 10%;
     margin-left: 30%; border: 2PX solid black; width: 40%;border-radius: 20px; padding: 20px; height: 20px;  background-image: url(/login.avif);" >
      <h3 style="text-align: center; margin-top: 0%; color: whitesmoke; font-weight: 10000;">Login </h3>
-        <form action="/index.html" name="RegForm" onsubmit=" return validateForm()">
+        <form action="/main.html" name="RegForm" onsubmit=" return validateForm()">
             
             <label for="EMail">Email Id</label>
             <input type="email" name="EMail" placeholder="Enter your Email id" style="border-radius: 10px; width: 300px; height: 25px; margin-top: 8px;margin-left: 22%; background-color: rgb(238, 230, 230); border: 0cap; padding-left: 14px; margin-bottom: 8px;" />
